--- a/2DIC/SimParms.config
+++ b/2DIC/SimParms.config
@@ -7,14 +7,14 @@ tsv_path = None
 tsv_shape = 
 
 [Solver]
-layer = 1
-number_of_core = 8
+number_of_core = 32
+iter_num = 1
 
 [Grid]
-granularity = 4
+granularity = 1
 rows = 32
 cols = 32
-depth = 4
+depth = 1
 grid_mode = max
 
 # Below is for information only: It's hard coded in the tool
