--- a/Mono3D/SimParms.config
+++ b/Mono3D/SimParms.config
@@ -7,11 +7,12 @@ tsv_path = None
 tsv_shape = cylinder
 
 [Solver]
-number_of_core = 8
-processes = 32
+number_of_core = 40
+processes = 40
+iter_num = 1
 
 [Grid]
-granularity = 4
+granularity = 1
 rows = 32
 cols = 32
 depth = 1
