--- a/TSV3D/SimParms.config
+++ b/TSV3D/SimParms.config
@@ -7,8 +7,9 @@ tsv_path = ../TSV3D/flp_files/TSV_flp.csv
 tsv_shape = cylinder
 
 [Solver]
-number_of_core = 8
-processes = 32
+number_of_core = 40
+processes = 40
+iter_num = 1
 
 [Grid]
 granularity = 1
